19990720-13:40 EDT Paul Tucker <ptucker@sympatico.ca>
  * source/rtl/gtapi.c
    * If a color string of ("r/b,b/r" ) is used, the
      fifth param is set equal to the second. (as in clipper)

19990720-13:30 EDT Paul Tucker <ptucker@sympatico.ca>
  * source/rtl/gtapi.c
    * implimented color attribute in gtWrite and gtScroll.
      This is the last selected color set via gt_ColorSelect()

19990721-16:35 CET David G. Holm <dholm@jsd-llc.com>
  * source/compiler/harbour.y
    ! Correct _StdFunc entty for INKEY to allow no parameters
    - Removed _StdFunc entry for SET
    * Display build date for include/version.h instead of a season

19990721-15:10 CET Felipe Coury
  + bldodbc.bat; hbodbc.b32; source/odbc/bld32exe.bat; source/odbc/harbour.mdb;
    source/odbc/hb32.bat; source/odbc/odbc.c; source/odbc/odbc.txt;
    source/odbc/odbc32.def; source/odbc/sql.ch; source/odbc/sql.h;
    source/odbc/sqlext.h; source/odbc/sqltypes.h; source/odbc/testodbc.prg
    First version of ODBC implemented.

19990720-14:35 CET Matthew Hamilton
  * tests/working/inifiles.prg
    New version installed

19990720-09:55 CET Eddie Runia <eddie@runia.com>
  * source/rtl/files.c
    #include <errno.h> added for __BORLANDC__

19990720-09:30 CET Eddie Runia <eddie@runia.com>
  * tests/working/run_all.bat
    %1 exchanged for test_all

19990719-17:55 EDT Paul Tucker <ptucker@sympatico.ca>
  * source/rtl/gtapi.c
    - removed temp init line now that init order is fixed.
    + added call to gtDone from hb_gtExit
  * source/rtl/setcolor.c
    * removed a comma
  * tests/working tstcolor.prg
    + Added 'numeric' color example.

19990719-16:50 EDT David G. Holm <dholm@jsd-llc.com>
  * config/dos/bcc31.cf
    + Added -DHARBOUR_USE_GTAPI and -DHARBOUR_USE_DOS_GTAPI
      to the C preprocessor options
  * include/set.h
    + Added prototypes for hb_consoleInitialize() and
      hb_consoleRelease(), because console doesn't own
      an include file and these two functions were added